# carbide

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  cliff.toml
scripts/: changelog.py  docker-build.py  release.py
src/: cef_bridge.rs  cli.rs  lib.rs  main.rs  ui.rs  utils.rs
src/browser/: bridge.rs
src/cef_bridge/: app.rs  client.rs  render.rs
src/cli/: cli.rs
src/gfx/: vector.rs
src/input/: keyboard.rs  mouse.rs  tty.rs
src/input/dcs/: resource.rs  status.rs
src/output/: painter.rs  render_thread.rs  renderer.rs  window.rs
src/ui/: navigation.rs
src/utils/: log.rs
