[package]
name = "carbonyl"
version = "0.0.3"
edition = "2024"

[dependencies]
libc = "0.2"
unicode-width = "0.2.0"
unicode-segmentation = "1.10.0"
chrono = "0.4.23"
tracing = "0"
tracing-appender = "0"
tracing-subscriber = { version = "0", features = ["tracing-log", "env-filter"] }

[lib]
name = "carbonyl"
path = "src/lib.rs"
crate-type = ["cdylib"]
