[package]
name = "carbonyl"
version = "0.0.3"
edition = "2024"

[dependencies]
libc = "0.2"
unicode-width = "0.2.0"
unicode-segmentation = "1.12.0"
chrono = "0.4.40"
tracing = "0"
tracing-appender = "0"
tracing-subscriber = { version = "0", features = ["tracing-log", "env-filter"] }
anyhow = "1"
clap = {version = "4", features = ["derive"]}
cef = "133"
ratatui = "0.29.0"
crossterm = "0.28.1"
shadow-rs = {version = "1", default-features = false}

[build-dependencies]
anyhow = "1"
shadow-rs = "1"
